--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,16 +4,133 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="@dimen/common_spacing"
     tools:context=".MainActivity">
 
-    <TextView
+    <ImageView
+        android:id="@+id/avatar_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/out_string"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:contentDescription="@string/avatar_place"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:src="@sample/posts_avatars" />
+
+    <TextView
+        android:id="@+id/author_text_view"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/common_spacing"
+        android:ellipsize="end"
+        android:singleLine="true"
+        android:textSize="@dimen/common_text_size"
+        app:layout_constraintBottom_toTopOf="@id/published_text_view"
+        app:layout_constraintEnd_toStartOf="@id/menu_button"
+        app:layout_constraintStart_toEndOf="@id/avatar_view"
+        app:layout_constraintTop_toTopOf="@id/avatar_view"
+        tools:text="@sample/posts.json/data/author" />
+
+    <TextView
+        android:id="@+id/published_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/common_spacing"
+        android:textSize="@dimen/common_text_size"
+        app:layout_constraintBottom_toBottomOf="@id/avatar_view"
+        app:layout_constraintStart_toEndOf="@id/avatar_view"
+        app:layout_constraintTop_toBottomOf="@id/author_text_view"
+        tools:text="@sample/posts.json/data/published" />
+
+    <ImageButton
+        android:id="@+id/menu_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@android:color/transparent"
+        android:contentDescription="@string/show_menu"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:src="@drawable/ic_baseline_more_vert_24" />
+
+    <androidx.constraintlayout.widget.Barrier
+        android:id="@+id/avatar_barrier"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:barrierDirection="bottom"
+        app:barrierMargin="@dimen/common_spacing"
+        app:constraint_referenced_ids="avatar_view,published_text_view" />
+
+    <TextView
+        android:id="@+id/post_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:autoLink="web"
+        android:background="@color/white"
+        android:elevation="4dp"
+        app:layout_constraintTop_toBottomOf="@id/avatar_barrier"
+        tools:text="@sample/posts.json/data/postText" />
+
+    <ImageButton
+        android:id="@+id/like_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/half_spacing"
+        android:background="@android:color/transparent"
+        android:contentDescription="@string/show_menu"
+        app:layout_constraintTop_toBottomOf="@id/post_text"
+        tools:src="@drawable/ic_outline_favorite_border_24" />
+
+    <TextView
+        android:id="@+id/count_likes_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/half_spacing"
+        app:layout_constraintBottom_toBottomOf="@+id/like_button"
+        app:layout_constraintStart_toEndOf="@+id/like_button"
+        app:layout_constraintTop_toTopOf="@+id/like_button"
+        tools:text="@sample/posts.json/data/likes"
+        android:textColor="@color/red"
+        />
+    <ImageButton
+        android:id="@+id/repost_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toEndOf="@id/count_likes_view"
+        app:layout_constraintTop_toTopOf="@id/like_button"
+        app:layout_constraintBottom_toBottomOf="@id/like_button"
+        android:layout_marginStart="@dimen/common_spacing"
+        tools:src="@drawable/ic_baseline_share_24"
+        android:background="@android:color/transparent"
+        />
+    <TextView
+        android:id="@+id/count_repost_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/half_spacing"
+        app:layout_constraintBottom_toBottomOf="@+id/like_button"
+        app:layout_constraintStart_toEndOf="@+id/repost_button"
+        app:layout_constraintTop_toTopOf="@+id/like_button"
+        tools:text="@sample/posts.json/data/reposts"
+        android:textColor="@color/blue"
+        />
+    <TextView
+        android:id="@+id/watches_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/like_button"
+        app:layout_constraintBottom_toBottomOf="@id/like_button"
+        tools:text="@sample/posts.json/data/watches"
+        android:textColor="@color/blue"/>
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="@id/like_button"
+        app:layout_constraintBottom_toBottomOf="@id/like_button"
+        app:layout_constraintEnd_toStartOf="@id/watches_view"
+        android:src="@drawable/ic_baseline_remove_red_eye_24"
+        android:layout_marginEnd="@dimen/half_spacing"
+
+        />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
