CRUD implementation: new interface OnInteractionListener for actions

--- a/app/src/main/res/menu/popup_post.xml
+++ b/app/src/main/res/menu/popup_post.xml
@@ -3,4 +3,7 @@
     <item
         android:id="@+id/removeItem"
         android:title="@string/remove" />
+    <item
+        android:id="@+id/editItem"
+        android:title="@string/edit" />
 </menu>
