--- a/app/src/main/res/layout/post_card.xml
+++ b/app/src/main/res/layout/post_card.xml
@@ -40,16 +40,17 @@
         app:layout_constraintTop_toBottomOf="@id/author_text_view"
         tools:text="@sample/posts.json/data/published" />
 
-    <ImageButton
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/menu_button"
+        style="@style/Widget.AppTheme.MenuButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@android:color/transparent"
         android:contentDescription="@string/show_menu"
-        android:src="@drawable/ic_baseline_more_vert_24"
         android:visibility="visible"
+        app:fabSize="mini"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_baseline_more_vert_24" />
 
     <androidx.constraintlayout.widget.Barrier
         android:id="@+id/avatar_barrier"
@@ -64,58 +65,41 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:autoLink="web"
-        android:background="@color/white"
         android:elevation="4dp"
         app:layout_constraintTop_toBottomOf="@id/avatar_barrier"
         tools:text="@sample/posts.json/data/postText" />
 
-    <ImageButton
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/like_button"
+        style="@style/Widget.AppTheme.LikeButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/half_spacing"
-        android:background="@android:color/transparent"
+        android:checkable="true"
         android:contentDescription="@string/like_button"
-        android:src="@drawable/ic_outline_favorite_border_24"
         android:visibility="visible"
-        app:layout_constraintEnd_toStartOf="@id/count_likes_view"
+        app:icon="@drawable/ic_like_24dp"
+        app:layout_constraintEnd_toStartOf="@id/repost_button"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/post_text"
-        tools:src="@drawable/ic_outline_favorite_border_24" />
+        tools:checked="true"
 
-    <TextView
-        android:id="@+id/count_likes_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/red"
-        app:layout_constraintBottom_toBottomOf="@+id/like_button"
-        app:layout_constraintStart_toEndOf="@+id/like_button"
-        app:layout_constraintTop_toTopOf="@+id/like_button"
         tools:text="@sample/posts.json/data/likes" />
 
-    <ImageButton
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/repost_button"
+        style="@style/Widget.AppTheme.RepostButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/common_spacing"
-        android:background="@android:color/transparent"
         android:contentDescription="@string/repost_button"
-        android:src="@drawable/ic_baseline_share_24"
         android:visibility="visible"
+        app:icon="@drawable/ic_baseline_share_24"
         app:layout_constraintBottom_toBottomOf="@id/like_button"
-        app:layout_constraintEnd_toStartOf="@id/count_repost_view"
-        app:layout_constraintStart_toEndOf="@id/count_likes_view"
-        app:layout_constraintTop_toTopOf="@id/like_button" />
-
-    <TextView
-        android:id="@+id/count_repost_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/blue"
-        app:layout_constraintBottom_toBottomOf="@+id/like_button"
-        app:layout_constraintStart_toEndOf="@+id/repost_button"
-        app:layout_constraintTop_toTopOf="@+id/like_button"
+        app:layout_constraintStart_toEndOf="@id/like_button"
+        app:layout_constraintTop_toTopOf="@id/like_button"
         tools:text="@sample/posts.json/data/reposts" />
+
 
     <TextView
         android:id="@+id/watches_view"
