--- a/app/src/main/res/layout/post_card.xml
+++ b/app/src/main/res/layout/post_card.xml
@@ -68,6 +68,24 @@
         android:elevation="4dp"
         app:layout_constraintTop_toBottomOf="@id/avatar_barrier"
         tools:text="@sample/posts.json/data/postText" />
+    <ImageButton
+        android:id="@+id/video_link"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/post_text"
+        android:background="@mipmap/ic_launcher"
+        android:src="@drawable/ic_baseline_play_arrow_24"
+        android:visibility="gone"
+        />
+
+
+    <androidx.constraintlayout.widget.Barrier
+        android:id="@+id/content_barrier"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:barrierDirection="bottom"
+        app:constraint_referenced_ids="post_text, video_link" />
+
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/like_button"
@@ -81,7 +99,7 @@
         app:icon="@drawable/ic_like_24dp"
         app:layout_constraintEnd_toStartOf="@id/repost_button"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/post_text"
+        app:layout_constraintTop_toBottomOf="@id/content_barrier"
         tools:checked="true"
 
         tools:text="@sample/posts.json/data/likes" />
