--- a/app/src/main/res/layout/new_post_fragment.xml
+++ b/app/src/main/res/layout/new_post_fragment.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="@dimen/icon_button_min_size"
-    tools:context=".NewPostActivity">
+    tools:context=".NewPostFragment">
 
     <EditText
         android:id="@+id/new_content"
