show only one post in new fragment, when click on list element

--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -13,10 +13,17 @@
         <action
             android:id="@+id/action_feedFragment_to_newPostFragment"
             app:destination="@id/newPostFragment" />
+        <action
+            android:id="@+id/action_feedFragment_to_showPostFragment"
+            app:destination="@id/showPostFragment" />
     </fragment>
     <fragment
         android:id="@+id/newPostFragment"
         android:name="ru.netology.nmedia.NewPostFragment"
         android:label="new_post_fragment"
         tools:layout="@layout/new_post_fragment" />
+    <fragment
+        android:id="@+id/showPostFragment"
+        android:name="ru.netology.nmedia.ShowPostFragment"
+        android:label="ShowPostFragment" />
 </navigation>
