--- a/app/src/main/res/layout/post_card.xml
+++ b/app/src/main/res/layout/post_card.xml
@@ -7,6 +7,15 @@
     android:padding="@dimen/common_spacing"
     tools:context=".ShowPostFragment">
 
+    <androidx.constraintlayout.widget.Group
+        android:id="@+id/click_on_post"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:clickable="true"
+        app:constraint_referenced_ids="avatar_view,author_text_view,published_text_view,post_text"
+        app:layout_constraintBottom_toBottomOf="@id/post_text"
+        app:layout_constraintTop_toTopOf="@id/avatar_view" />
+
     <ImageView
         android:id="@+id/avatar_view"
         android:layout_width="48dp"
@@ -69,15 +78,16 @@
         android:elevation="4dp"
         app:layout_constraintTop_toBottomOf="@id/avatar_barrier"
         tools:text="@sample/posts.json/data/postText" />
+
     <ImageButton
         android:id="@+id/video_link"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/post_text"
         android:background="@mipmap/ic_launcher"
+        android:contentDescription="@string/video_button"
         android:src="@drawable/ic_baseline_play_arrow_24"
         android:visibility="gone"
-        />
+        app:layout_constraintTop_toBottomOf="@id/post_text" />
 
 
     <androidx.constraintlayout.widget.Barrier
@@ -132,4 +142,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/like_button"
         tools:text="@sample/posts.json/data/watches" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
